# HPD-Agent-Framework

./: .gitignore  .gitmodules  ANALYSIS_FUNCTIONINVOKING_MIGRATION.md  ANALYSIS_SUMMARY.txt  AOT_FACTORY_REGISTRATION_EXAMPLE.cs  BREAKING_CHANGES_REPORT_v0.1.1_to_HEAD.md  BREAKING_CHANGES_SUMMARY.md  CHANGELOG.md  CHANGELOG_SYSTEM_INSTRUCTIONS.md  CONTEXT_FLOW_DOCUMENTATION_INDEX.md  CONVERSATION_THREAD_API_CHANGES.md  DX_ANALYSIS_README.md  DX_COMPARISON.md  Directory.Build.props  FINAL_BIDIRECTIONAL_FILTER_PROPOSAL.md  FINAL_BIDIRECTIONAL_FILTER_PROPOSAL_V2.md  HPD-Agent.code-workspace  HPD-Agent.sln  HPD-Agent.slnx  HPD_AGENT_CONTEXT_FLOW_MAP.md  HPD_AGENT_CONTEXT_FLOW_SUMMARY.md  HPD_AGENT_CONTEXT_QUICK_REFERENCE.md  HPD_AGENT_DURABILITY_COMPARISON.md  LANGCHAIN_V1_DX_ANALYSIS.md  LANGCHAIN_V1_LANGGRAPH_INTEGRATION.md  LANGCHAIN_V1_QUICK_REFERENCE.md  LANGCHAIN_V1_QUICK_SUMMARY.md  LICENSE  MAUI_COMPLETION_SUMMARY.md  MESSAGE_ADDITION_ARCHITECTURE.md  MESSAGE_DUPLICATION_BUG_FIX.md  MICROSOFT_CHATOPTIONS_ANALYSIS_INDEX.md  MICROSOFT_CHATOPTIONS_IMPLEMENTATION_LOCATIONS.md  MICROSOFT_CHATOPTIONS_QUICK_REFERENCE.md  MICROSOFT_EXTENSIONS_AI_CHATOPTIONS_ANALYSIS.md  MIGRATION.md  NUGET_MIGRATION.md  NUGET_RELEASE.md  OPENROUTER_UPGRADE_SUMMARY.md  OVERVIEW.md  (+31 more)
Rust/hpd_rust_agent/: Cargo.toml
Rust/hpd_rust_agent/examples/: agent_math_conversation.rs.disabled  basic_agent.rs  function_call_test.rs  interactive_streaming_demo.rs  plugin_development.rs.disabled  real_agent_conversation.rs  stateful_conversation_test.rs  stateful_vs_stateless_comparison.rs  (+2 more)
(+4693 files in other folders)
