[package]
name = "hpd_rust_agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["internal"]
internal = []

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["sync", "macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
once_cell = "1.19"
hpd_rust_agent_macros = { path = "../hpd_rust_agent_macros" }
